Landing page design

--- a/voting/templates/base.html
+++ b/voting/templates/base.html
@@ -1,14 +1,24 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+	<link rel="stylesheet" href="{% static 'style.css' %}">
+
+	<script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>	
+	
 	<title>Title</title>
 </head>
-<body>
+<body class="mdc-typography">
 	{% block body %}
 	
 	{% endblock body %}
+	<script src="{% static 'main.js' %}"></script>
 </body>
 </html>
