--- a/voting/templates/base.html
+++ b/voting/templates/base.html
@@ -12,13 +12,16 @@
 	<link rel="stylesheet" href="{% static 'style.css' %}">
 
 	<script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>	
-	
+
 	<title>Title</title>
 </head>
 <body class="mdc-typography">
 	{% block body %}
 	
 	{% endblock body %}
+
+	<p id="watermark" class="mdc-typography--caption">Made by 11 P</p>
+
 	<script src="{% static 'main.js' %}"></script>
 </body>
 </html>
