--- a/voting/templates/base.html
+++ b/voting/templates/base.html
@@ -13,7 +13,7 @@
 
 	<script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>	
 
-	<title>Title</title>
+	<title>Kádi Választás</title>
 </head>
 <body class="mdc-typography">
 	{% block body %}
