Limited voting form width for large screens

--- a/voting/static/style.css
+++ b/voting/static/style.css
@@ -132,3 +132,8 @@ main {
 .mdc-ripple-surface--primary:before {
     background-color: var(--mdc-theme-primary);
 }
+
+.voting-form {
+    max-width: 800px;
+    margin: auto;
+}
