Added logout functionality

--- a/voting/templates/voting/vote.html
+++ b/voting/templates/voting/vote.html
@@ -7,7 +7,7 @@
 			<span class="mdc-top-app-bar__title">Kádi választás 2021</span>
 		</section>
 		<section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
-			<a class="material-icons mdc-top-app-bar__action-item mdc-icon-button" aria-label="Favorite">logout</a>
+			<a href="{% url 'logout' %}" class="material-icons mdc-top-app-bar__action-item mdc-icon-button" aria-label="Favorite">logout</a>
 		</section>
 	</div>
 </header>
