--- a/voting/templates/voting/postlogin.html
+++ b/voting/templates/voting/postlogin.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block body %}
-	<div class="postlogin-container">
+	<div class="centered-container">
 		<h4 class="mdc-typography--headline3 landing-title">
 			Sikeres bejelentkezés
 		</h4>
