--- a/voting/templates/voting/postlogin.html
+++ b/voting/templates/voting/postlogin.html
@@ -26,7 +26,7 @@
 		{% else %}
 			<h6 class="mdc-typography--headline6 info-headline">Néhány tudnivaló:</h6>
 			<p class="mdc-typography--body2">
-				Csak egyszer szavazhats, és később <b>nem</b> tudod megváltoztatni, szóval válassz megfontoltan! <br>
+				Csak egyszer szavazhatsz, és később <b>nem</b> tudod megváltoztatni, szóval válassz megfontoltan! <br>
 				Az eredményeket csak a szavazás lezárása után tesszük közzé ezen az oldalon.
 			</p>
 		{% endif %}
