--- a/voting/templates/voting/postlogin.html
+++ b/voting/templates/voting/postlogin.html
@@ -6,18 +6,18 @@
 			Sikeres bejelentkezés
 		</h4>
 		<h5 class="mdc-typography--headline4 pl-name">
-			{{request.session.user.displayName}}
+			{{request.session.voter.displayName}}
 		</h5>
 		<p class='pl-email'>
-			{{request.session.user.userPrincipalName}}
+			{{request.session.voter.userPrincipalName}}
 		</p>
-		{% if not request.session.user.authorized %}
+		{% if not request.session.voter.authorized %}
 			<p class="mdc-typography--body2">
 				Ezzel az email címmel nincs jogod szavazni. <br>
 				Ellenőrizd, hogy a megfelelő email címet adtad meg! <br>
 				<i class="mdc-typography--caption">[vezetéknév].[keresztnév][születési év]@tanulo.boronkay.hu</i>
 			</p>
-		{% elif request.session.user.has_voted %}
+		{% elif request.session.voter.has_voted %}
 			<h6 class="mdc-typography--headline6 info-headline">Már szavaztál!</h6>
 			<p class="mdc-typography--body2">
 				Egy email címről csak egyszer szavazhatsz, és ezt később nem módosíthatod. <br>
@@ -35,7 +35,7 @@
 				<span class="mdc-button__ripple"></span>
 				<span class="mdc-button__label">Kijelentkezés</span>
 			</a>
-			{% if request.session.user.authorized and not request.session.user.has_voted %}
+			{% if request.session.voter.authorized and not request.session.voter.has_voted %}
 				<a href="{% url 'vote' %}" class="mdc-button mdc-button--raised ripple">
 					<span class="mdc-button__ripple"></span>
 					<span class="mdc-button__label">szavazás</span>
