--- a/voting/templates/voting/ended.html
+++ b/voting/templates/voting/ended.html
@@ -6,7 +6,7 @@
 			A szavazás lezárult
 		</h4>
 		<div class="pl-buttons">
-			<a class="mdc-button mdc-button--raised ripple">
+			<a href="{% url 'results' %}" class="mdc-button mdc-button--raised ripple">
 				<span class="mdc-button__ripple"></span>
 				<span class="mdc-button__label">Eredmények</span>
 			</a>
