--- a/voting/templates/voting/landing.html
+++ b/voting/templates/voting/landing.html
@@ -2,7 +2,7 @@
 {% block body %}
 	<div class="landigpage-container">
 		<h3 class="mdc-typography--headline3 landing-title">Boronkay <br> Kádi választás <br> 2021</h3>
-		<p>A szavazáshoz be kell jelentkezned az iskolai email címeddel, mert így tudjuk ellenőrizni, hogy mindenki csak egyszer szavaz, és valóban a Boronkay-ba jár.</p>
+		<p>A szavazáshoz be kell jelentkezned az iskolai email címeddel, mert így tudjuk ellenőrizni, hogy mindenki csak egyszer szavaz, és valóban a Boronkays.</p>
 		<div class="landingpage-buttons">
 			<a href="{% url 'howitworks' %}" class="mdc-button mdc-button--outlined ripple">
 				<span class="mdc-button__ripple"></span>
