--- a/voting/templates/voting/howitworks.html
+++ b/voting/templates/voting/howitworks.html
@@ -1,5 +1,36 @@
 {% extends 'base.html' %}
 
 {% block body %}
-	<h1 class="mdc-typography--headline2">Nem működik.</h1>
+	<div class="hw-container">
+		<h3 class="mdc-typography--headline3 howitworks-title">Bejelentkezés</h3>
+		<p>A nyitó oldalon a <code>Bejelentkezés</code> gombra kattintva tudsz bejelentkezni. Ezt az iskolai email címeddel tudod megtenni, ez tanároknak <code>[vezetéknév].[keresztnév]@boronkay.hu</code>, diákoknak pedig a <code>[vezetéknév].[keresztnév][születési év]@tanulo.boronkay.hu</code> címet jelenti.</p>
+		<p>A bejelentkezés a Microsoft-on keresztül történik, így ehhez az átirányítunk a <a href="https://login.microsoftonline.com/">https://login.microsoftonline.com/</a> bejelentkezési felületére. Itt meg kell adnod a bejelntekési adataidat, illetve bele kell egyezned, hogy ez az alkalmazás hozzáférhet az adataidhoz (nem kell aggódnod, az email címeden, neveden és profilképeden kívül más adat nem áll rendelkezésre).</p>
+		<p>Erre azért van szükség, mert így tudjuk a legbiztonságosabban és legegyszerűbben ellenőrizni, hogy jogosult vagy a szavazásra. A jelszavadat ez az alkalmazás soha semmilyen körülmények között nem kapja meg, csak egy ehhez hasonló kódot a Microsoft-tól: <code>eyJ0eXAiOiJKV1Q....iLCJu1hFZyJ9</code>. Ezzel a kóddal tudjuk lekérni az email címedet, és így ellenőrizni, hogy Boronkay-s vagy.</p>
+		
+		<h3 class="mdc-typography--headline3 howitworks-title">Szavazás</h3>
+		<p>Ha sikerült bejelentkezni, akkor a <code>Szavazás</code> gombra kattintva érheted el a jelöltek listáját, itt csak egyszerűen kattints rá arra a jelöltre, akire szavazni szeretnél, majd kattints a <code>Szavazat Elküldése</code> gombra.</p>
+		<p>Minden email címről csak egyszer lehet szavazni, és szavazatodat később adatvédelmi okok miatt nem tudod megváltoztatni.</p>
+
+		<h3 class="mdc-typography--headline3 howitworks-title">Adatvédelem</h3>
+		<p>Amint elküldted a szavazatodat, azt egy adatbázisban rögzítjük, ezen kívül az email címed is mentésre kerül, hogy később ellenőrizni tudjuk, hogy szavaztál-e már erről a címről. Az email címedet és szavazatodat egymástól teljesen függetlenül tároljuk, így nem lehet megállapítani, hogy ki kire szavazott, csakis a szavazatok összesített számát.</p>
+		
+		<h3 class="mdc-typography--headline3 howitworks-title" id="contact">Elérhetőség</h3>
+		<p>
+			Bármilyen kérdésed, észrevételed van az oldal működésével, vagy az eredménnyel kapcsolatban, elérherőségeim:<br>
+			<table>
+				<tr>
+					<th>Email:</th>
+					<td><a href="mailto:toth.boldizsar2003@tanulo.boronkay.hu">toth.boldizsar2003@tanulo.boronkay.hu</a></td>
+				</tr>
+				<tr>
+					<th>Instagram:</th>
+					<td><a href="http://instagram.com/toth.boldizsar" target="_blank">@toth.boldizsar</a></td>
+				</tr>
+				<tr>
+					<th>Discord:</th>
+					<td><a href="http://discordapp.com/users/489872017416519680" target="_blank">sn4k3ch4rm3r#6969</a></td>
+				</tr>
+			</table>
+		</p>
+	</div>
 {% endblock body %}
