--- a/voting/templates/voting/howitworks.html
+++ b/voting/templates/voting/howitworks.html
@@ -15,22 +15,21 @@
 		<p>Amint elküldted a szavazatodat, azt egy adatbázisban rögzítjük, ezen kívül az email címed is mentésre kerül, hogy később ellenőrizni tudjuk, hogy szavaztál-e már erről a címről. Az email címedet és szavazatodat egymástól teljesen függetlenül tároljuk, így nem lehet megállapítani, hogy ki kire szavazott, csakis a szavazatok összesített számát.</p>
 		
 		<h3 class="mdc-typography--headline3 howitworks-title" id="contact">Elérhetőség</h3>
-		<p>
-			Bármilyen kérdésed, észrevételed van az oldal működésével, vagy az eredménnyel kapcsolatban, elérherőségeim:<br>
-			<table>
-				<tr>
-					<th>Email:</th>
-					<td><a href="mailto:toth.boldizsar2003@tanulo.boronkay.hu">toth.boldizsar2003@tanulo.boronkay.hu</a></td>
-				</tr>
-				<tr>
-					<th>Instagram:</th>
-					<td><a href="http://instagram.com/toth.boldizsar" target="_blank">@toth.boldizsar</a></td>
-				</tr>
-				<tr>
-					<th>Discord:</th>
-					<td><a href="http://discordapp.com/users/489872017416519680" target="_blank">sn4k3ch4rm3r#6969</a></td>
-				</tr>
-			</table>
-		</p>
+		<p>Bármilyen kérdésed, észrevételed van az oldal működésével, vagy az eredménnyel kapcsolatban, elérherőségeim:</p>
+		<table>
+			<tr>
+				<th>Email:</th>
+				<td><a href="mailto:toth.boldizsar2003@tanulo.boronkay.hu">toth.boldizsar2003@tanulo.boronkay.hu</a></td>
+			</tr>
+			<tr>
+				<th>Instagram:</th>
+				<td><a href="http://instagram.com/toth.boldizsar" target="_blank">@toth.boldizsar</a></td>
+			</tr>
+			<tr>
+				<th>Discord:</th>
+				<td><a href="http://discordapp.com/users/489872017416519680" target="_blank">sn4k3ch4rm3r#6969</a></td>
+			</tr>
+		</table>
+		<p>Az oldal forráskódja megtalálható GitHub-on is: <a href="https://github.com/sn4k3ch4rm3r/kadi-valasztas" target="_blank">https://github.com/sn4k3ch4rm3r/kadi-valasztas</a></p>
 	</div>
 {% endblock body %}
