--- a/voting/static/style.css
+++ b/voting/static/style.css
@@ -3,7 +3,7 @@
     --mdc-theme-secondary: #018786;
 }
 
-.landing-title {
+.landing-title, .results-title {
     font-size: 11.5vw;
     line-height: normal;
 }
@@ -31,7 +31,7 @@
 }
 
 @media screen and (min-width: 700px) {
-    .landing-title {
+    .landing-title, .results-title {
         font-size: 3.75em;
         font-weight: 300;
     }
@@ -220,4 +220,12 @@ code {
 
 a {
     color: var(--mdc-theme-secondary);
+}
+
+.results-title {
+    margin: 30px 0 20px;
+}
+
+.total-count {
+    margin: 0;
 }
