--- a/voting/templates/voting/results.html
+++ b/voting/templates/voting/results.html
@@ -4,18 +4,21 @@
 	<script src="https://cdn.jsdelivr.net/npm/chart.js@3.3.2/dist/chart.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@next/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
 	<div class="centered-container">
-		<h4 class="mdc-typography--headline3 landing-title">
+		<h3 class="mdc-typography--headline3 results-title">
 			A szavazás eredménye
-		</h4>
-		<div class="chart-container">
-			<canvas class='chart' id="voting-results-pie"></canvas>
-		</div>
-		<div class="chart-container">
-			<canvas height="200px" class='chart' id="voting-results-bar"></canvas>
-		</div>
-		<div class="chart-container">
-			<canvas class='chart' id="voting-timeline"></canvas>
-		</div>
+		</h3>
+		<h5 class="mdc-typography--headline5 total-count">Összesen {{total}} szavazat érkezett.</h5>
+		{% if total > 0 %}
+			<div class="chart-container">
+				<canvas class='chart' id="voting-results-pie"></canvas>
+			</div>
+			<div class="chart-container">
+				<canvas height="200px" class='chart' id="voting-results-bar"></canvas>
+			</div>
+			<div class="chart-container">
+				<canvas class='chart' id="voting-timeline"></canvas>
+			</div>
+		{% endif %}
 	</div>
 	<script>
 		let votingResultsPie = document.getElementById('voting-results-pie').getContext('2d');
