Fixed some typos

--- a/voting/templates/voting/howitworks.html
+++ b/voting/templates/voting/howitworks.html
@@ -4,7 +4,7 @@
 	<div class="hw-container">
 		<h3 class="mdc-typography--headline3 howitworks-title">Bejelentkezés</h3>
 		<p>A nyitó oldalon a <code>Bejelentkezés</code> gombra kattintva tudsz bejelentkezni. Ezt az iskolai email címeddel tudod megtenni, ez tanároknak <code>[vezetéknév].[keresztnév]@boronkay.hu</code>, diákoknak pedig a <code>[vezetéknév].[keresztnév][születési év]@tanulo.boronkay.hu</code> címet jelenti.</p>
-		<p>A bejelentkezés a Microsoft-on keresztül történik, így ehhez az átirányítunk a <a href="https://login.microsoftonline.com/">https://login.microsoftonline.com/</a> bejelentkezési felületére. Itt meg kell adnod a bejelntekési adataidat, illetve bele kell egyezned, hogy ez az alkalmazás hozzáférhet az adataidhoz (nem kell aggódnod, az email címeden, neveden és profilképeden kívül más adat nem áll rendelkezésre).</p>
+		<p>A bejelentkezés a Microsoft-on keresztül történik, így ehhez az átirányítunk a <a href="https://login.microsoftonline.com/">https://login.microsoftonline.com/</a> bejelentkezési felületére. Itt meg kell adnod a bejelentkezési adataidat, illetve bele kell egyezned, hogy ez az alkalmazás hozzáférhet az adataidhoz (nem kell aggódnod, az email címeden, neveden és profilképeden kívül más adat nem áll rendelkezésre).</p>
 		<p>Erre azért van szükség, mert így tudjuk a legbiztonságosabban és legegyszerűbben ellenőrizni, hogy jogosult vagy a szavazásra. A jelszavadat ez az alkalmazás soha semmilyen körülmények között nem kapja meg, csak egy ehhez hasonló kódot a Microsoft-tól: <code>eyJ0eXAiOiJKV1Q....iLCJu1hFZyJ9</code>. Ezzel a kóddal tudjuk lekérni az email címedet, és így ellenőrizni, hogy Boronkay-s vagy.</p>
 		
 		<h3 class="mdc-typography--headline3 howitworks-title">Szavazás</h3>
@@ -15,7 +15,7 @@
 		<p>Amint elküldted a szavazatodat, azt egy adatbázisban rögzítjük, ezen kívül az email címed is mentésre kerül, hogy később ellenőrizni tudjuk, hogy szavaztál-e már erről a címről. Az email címedet és szavazatodat egymástól teljesen függetlenül tároljuk, így nem lehet megállapítani, hogy ki kire szavazott, csakis a szavazatok összesített számát.</p>
 		
 		<h3 class="mdc-typography--headline3 howitworks-title" id="contact">Elérhetőség</h3>
-		<p>Bármilyen kérdésed, észrevételed van az oldal működésével, vagy az eredménnyel kapcsolatban, elérherőségeim:</p>
+		<p>Bármilyen kérdésed, észrevételed van az oldal működésével, vagy az eredménnyel kapcsolatban, elérhetőségeim:</p>
 		<table>
 			<tr>
 				<th>Email:</th>
