Made the year dynamic

--- a/voting/templates/voting/landing.html
+++ b/voting/templates/voting/landing.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block body %}
 	<div class="landigpage-container">
-		<h3 class="mdc-typography--headline3 landing-title">Boronkay <br> Kádi választás <br> 2021</h3>
+		<h3 class="mdc-typography--headline3 landing-title">Boronkay <br> Kádi választás <br> {% now "Y" %}</h3>
 		<p>A szavazáshoz be kell jelentkezned az iskolai email címeddel, mert így tudjuk ellenőrizni, hogy mindenki csak egyszer szavaz, és valóban a Boronkays.</p>
 		<div class="landingpage-buttons">
 			<a href="{% url 'howitworks' %}" class="mdc-button mdc-button--outlined ripple">
