--- a/voting/templates/base.html
+++ b/voting/templates/base.html
@@ -20,7 +20,7 @@
 	
 	{% endblock body %}
 
-	<p id="watermark" class="mdc-typography--caption">Made by 11 P <br> <a href="{%url 'howitworks'%}#contact">Elérhetőség</a></p>
+	<p id="watermark" class="mdc-typography--caption">Made by <a href="{%url 'howitworks'%}#contact">Tóth Boldizsár</a></p>
 
 	<script src="{% static 'main.js' %}"></script>
 </body>
