Fixed date on voting page

--- a/voting/templates/voting/vote.html
+++ b/voting/templates/voting/vote.html
@@ -4,7 +4,7 @@
 <header class="mdc-top-app-bar mdc-top-app-bar--elevated">
 	<div class="mdc-top-app-bar__row">
 		<section class="mdc-top-app-bar__section mdc-top-app-bar__section--centered">
-			<span class="mdc-top-app-bar__title">Kádi választás 2021</span>
+			<span class="mdc-top-app-bar__title">Kádi választás {% now "Y" %}</span>
 		</section>
 		<section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
 			<a href="{% url 'logout' %}" class="material-icons mdc-top-app-bar__action-item mdc-icon-button" aria-label="Favorite">logout</a>
