Updated contact info

--- a/voting/templates/voting/howitworks.html
+++ b/voting/templates/voting/howitworks.html
@@ -18,16 +18,12 @@
 		<p>Bármilyen kérdésed, észrevételed van az oldal működésével, vagy az eredménnyel kapcsolatban, elérhetőségeim:</p>
 		<table>
 			<tr>
-				<th>Email:</th>
-				<td><a href="mailto:toth.boldizsar2003@tanulo.boronkay.hu">toth.boldizsar2003@tanulo.boronkay.hu</a></td>
-			</tr>
-			<tr>
 				<th>Instagram:</th>
 				<td><a href="http://instagram.com/toth.boldizsar" target="_blank">@toth.boldizsar</a></td>
 			</tr>
 			<tr>
 				<th>Discord:</th>
-				<td><a href="http://discordapp.com/users/489872017416519680" target="_blank">sn4k3ch4rm3r#3961</a></td>
+				<td><a href="http://discordapp.com/users/489872017416519680" target="_blank">sn4k3ch4rm3r</a></td>
 			</tr>
 		</table>
 		<p>Az oldal forráskódja megtalálható GitHub-on is: <a href="https://github.com/sn4k3ch4rm3r/kadi-valasztas" target="_blank">https://github.com/sn4k3ch4rm3r/kadi-valasztas</a></p>
